# skidl-eda

./: .gitignore  PHASE0_REPORT.md  PHASE6_REPORT.md  README.md  pyproject.toml
canaries/: _syncgate.py
canaries/buckboost4/: bb4_skidl.py  drive_bb4.py  drive_bb4_xcheck.py
canaries/cmcontroller/: buck_cmcontroller.py  drive_buck_cmcontroller.py  drive_lt3757_boost.py  drive_topo_cmcontroller.py  lt3757_boost_closedloop.py  topo_cmcontroller.py
canaries/cuk/: cuk_skidl.py  drive_cuk.py  drive_cuk_ta08a.py  drive_cuk_xcheck.py  ta08a_cuk_skidl.py
canaries/currentmode/: drive_boost_loop.py  lt3757_boost_loop.py
canaries/dff_divider/: dff_skidl.py  drive_dff.py
canaries/flyback/: drive_flyback.py  flyback_skidl.py
canaries/forward/: drive_forward.py  drive_forward_cl.py  drive_forward_reset.py  forward_cl_skidl.py  forward_skidl.py
canaries/funcgen/: drive_funcgen.py  funcgen_skidl.py
canaries/hitl_pcb/: drive_hitl_pcb.py
canaries/hv_postreg/: drive_hv_postreg.py  hv_postreg_skidl.py
canaries/hvllc/: drive_hvllc.py  drive_hvllc_sat.py  hvllc_skidl.py
canaries/invbuckboost/: drive_ibb.py  drive_ibb_xcheck.py  ibb_skidl.py
canaries/llc_resonant/: drive_llc.py  drive_llc_device.py  llc_devicelevel.py  llc_skidl.py  zvs_metric.py
canaries/phase6/: drive_phase6.py
canaries/royer_zvs/: drive_royer.py  royer_skidl.py
canaries/sepic/: drive_sepic.py  drive_sepic_ta05a.py  drive_sepic_xcheck.py  sepic_skidl.py  ta05a_sepic_skidl.py
canaries/sipm_tia/: drive_equivalence.py  drive_phase0.py  drive_sim.py  drive_validation.py  sipm_tia_skidl.py
canaries/spice_library/: PHASE0_REPORT.md  drive_spike.py  drive_transient_loop.py
canaries/trig_pulser/: drive_trig_pulser.py  trig_pulser_skidl.py
scripts/: analyze_corpus_eval.py  import_corpus_results.py  run_corpus_eval.py  update_corpus_hashes.py
skidl_eda/: __init__.py  bootstrap.py  env.py  hitl.py  layout.py  project.py
skidl_eda/diagnostics/: __init__.py  diagnose.py  knowledge_base.py  test_guidance.py
skidl_eda/diagnostics/data/: README.md  debug_patterns.jsonl  spice_model_reliability.jsonl
skidl_eda/evaluation/: __init__.py  judge.py  quality_score.py  reference_oracle.py  spec.py
skidl_eda/export/: __init__.py  bom.py  pdf.py  report.py  sheet_images.py
skidl_eda/gates/: __init__.py  drawing_connectivity.py  equivalence.py  erc.py  footprint_check.py  kicad_cli.py  netlist_compare.py  sanity.py  save_gate.py
skidl_eda/sourcing/: __init__.py  availability.py  corpus_eval.py  find_spice_model.py  find_symbol.py  jlcsearch.py  known_models.py  ltspice_asc.py  presim.py  reliability.py  spice_library.py
skills/: README.md
skills/design-circuit/: SKILL.md
skills/new-project/: SKILL.md
tests/: test_bidirectional_xcheck.py  test_boost_loop.py  test_bootstrap.py  test_buckboost4_canary.py  test_cmcontroller.py  test_cmcontroller_lt3757.py  test_cmcontroller_topologies.py  test_corpus_eval.py  test_corpus_eval_twoterm.py  test_cuk_canary.py  test_cuk_ta08a_demo.py  test_dff_divider_canary.py  test_diagnostics.py  test_env.py  test_equivalence.py  test_evaluation.py  test_export_report.py  test_export_sheet_images.py  test_flyback_canary.py  test_forward_canary.py  test_funcgen_canary.py  test_gates_drawing_connectivity.py  test_gates_erc.py  test_gates_export_footprint.py  test_gates_netlist_compare.py  test_gates_sanity.py  test_hitl.py  test_hv_postreg_canary.py  test_hvllc_canary.py  test_hvllc_saturation.py  test_invbuckboost_canary.py  test_layout_pcb.py  test_ltspice_asc.py  test_orphan_sheet_cleanup.py  test_presim.py  test_project_generate.py  test_reliability.py  test_reliability_packaged.py  test_royer_canary.py  test_sepic_canary.py  (+10 more)
tests/spice_lib_fixtures/Diode/: generic.lib
tests/spice_lib_fixtures/Manufacturer/: vendor.lib
tests/spice_lib_fixtures/misc/: powmos.lib  unknown.lib
