[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skidl-eda"
version = "0.0.0.dev0"
description = "AI circuit-design loop harness on the skidl stack (gates, sourcing, sim entry, eval, diagnostics, E2E)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "freudenthal" }]
keywords = ["kicad", "skidl", "eda", "circuit", "spice", "pcb"]

# Peer packages (local editable installs during development; not yet on PyPI).
# skidl (fork, feat/kicad10-backend), skidl-layout, kicad-sch-api are installed
# from the sibling checkouts. Declared here for documentation; pinned installs
# happen via `uv pip install -e ./skidl -e ./skidl-layout` in the dev env.
dependencies = [
    "skidl>=2.2.3",
    "simp_sexp>=0.3.1",
]

[project.optional-dependencies]
# Live SPICE simulation via skidl.sim (PySpice + a loadable ngspice, e.g. KiCad's
# bundled ngspice.dll on Windows).
sim = ["PySpice>=1.5"]
# PCB placement + layout-quality metrics.
layout = ["skidl-layout>=0.1.0"]
# Human-in-the-loop KiCad round-trip / edit / MCP interface.
hitl = ["kicad-sch-api>=0.5.6"]
# Vector results-report PDF (authored pages + verbatim KiCad schematic pages).
report = ["reportlab>=4.0", "pypdf>=4.0"]
# Optional keyed sourcing (DigiKey); keyless JLC search needs no extras.
sourcing = ["requests>=2.28"]
# In-loop per-sheet PNG rendering (generate(sheet_images=True)); needs a native
# Cairo library at runtime. Without it, sheet_images still exports SVGs.
images = ["cairosvg>=2.5"]
test = ["pytest>=7"]

[project.scripts]
skidl-eda-bootstrap = "skidl_eda.bootstrap:main"

[tool.setuptools.packages.find]
include = ["skidl_eda*"]

[tool.setuptools.package-data]
# Pin the diagnostics/reliability datasets explicitly. Current setuptools does
# auto-include them (verified: a wheel built without this block still carries
# all four files), so this is belt-and-braces, not a fix for a live bug -- but
# auto-inclusion is version-dependent behaviour and these files are the
# difference between a working reliability reader and a silent degrade to
# curated-only. Cheap to state, expensive to lose. Keep the *.jsonl.gz glob:
# it covers the bundled corpus_eval measured snapshot.
"skidl_eda.diagnostics" = ["data/*.jsonl", "data/*.jsonl.gz", "data/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
